--- a/src/components/Cockpit/Cockpit.module.css
+++ b/src/components/Cockpit/Cockpit.module.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .red {
   color: red;
@@ -10,7 +7,7 @@
   font-weight: bold;
 }
 
-.Button {
+.Cockpit button {
   background-color: green;
   color: white;
   font: inherit;
@@ -19,15 +16,15 @@
   cursor: pointer;
 }
 
-.Button:hover {
+.Cockpit button:hover {
   background-color: lightgreen;
   color: black;
 }
 
-.Button.Red {
+.Cockpit button.Red {
   background-color: red;
 }
 
-.Button.Red:hover {
+.Cockpit button.Red:hover {
   background-color: salmon;
 }
